# Finance-Portfolio-Optimization-Pipeline

./: pyproject.toml
src/bronze/: alpha_vantage_api.py  extract_alpha_vantage_data.py  extract_finnhub_news_data.py  extract_fred_data.py  finhub_news_api.py  sec_edgar_data.py
tests/unit/: fake_response_api.py  test_alpha_vantage_api.py  test_api_utils.py  test_extract_alpha_vantage_data.py  test_extract_finnhub_news_data.py  test_extract_fred_data.py  test_extract_sec_edgar_data.py  test_sec_edgar_data.py
utils/: api_utils.py
