[project]
name = "finance-plan-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyspark>=3.5.0",
    "email-validator>=2.2.0",
    "finnhub-python>=2.4.22",
    "fredapi>=0.5.2",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "sec-edgar-downloader>=5.0.3",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
]
